✨ Improve guidelines and prompts

--- a/src/utils/guidelines/.pr_guidelines.md
+++ b/src/utils/guidelines/.pr_guidelines.md
@@ -1,25 +1,35 @@
 ### PR Description Guidelines
 
-Please ensure the PR description answers the following questions:
+Please ensure the PR description follows these strict guidelines:
 
-1. **What did you do?**
-    - Provide a clear, high-level summary of the changes.
-    - Avoid listing individual changes unless necessary.
-    - Example:
-      *Sentry now allows modifying the default breadcrumb message. Implemented feature to recognize clicked elements and human-readable text from available HTML attributes.*
+1. **What did you do?** (2-5 sentences)
+    - Provide a clear, factual summary of the actual changes made
+    - Focus only on what was implemented, not potential benefits
+    - Avoid speculation about future improvements
+    - Keep this section strictly factual and limited to 2-5 sentences, focusing only on the actual changes made.
 
-2. **Why did you do it?**
-    - Explain the purpose of the changes (technical and/or business reasons).
-    - Keep the reasoning focused and clear.
     - Example:
-      *Sentry breadcrumbs were not providing enough context to restore user actions, leading to confusion during debugging.*
+      *Added a new breadcrumb customization feature to Sentry that extracts clicked element text from data-* attributes and aria-label. Implemented fallback to element content when attributes are unavailable.*
+
+2. **Why did you do it?** (2-5 sentences)
+    - Include only reasons supported by provided context or visible technical needs
+    - If no clear business context is provided, focus on technical necessity
+    - Avoid assumptions about UX or platform improvements
+    - Example:
+      *Current breadcrumb implementation was missing critical user interaction details, causing incomplete error context. Internal logging showed 40% of customer issues required additional user steps clarification.*
 
 3. **How did you do it?**
-    - Summarize the technical implementation.
-    - Focus on significant changes and non-obvious details.
+    - List specific technical implementation details from the code changes
+    - Focus on architectural decisions and key technical choices
+    - Include any important technical constraints or considerations
     - Example:
-      *Refactored the dropdown component using the Intersection Observer API to dynamically position the dropdown menu.*
+      *Implemented a new BreadcrumbProcessor class that:
+      - Extracts text using a priority-based attribute reader (data-* > aria-label > textContent)
+      - Integrates with existing Sentry event pipeline
+      - Maintains backward compatibility with existing breadcrumb format*
 
-**Additional Tips:**
-- Include **visual aids** (screenshots, diagrams) when applicable.
-- Keep the description **concise** but informative.
+**Additional Requirements:**
+- Keep all sections concise and factual
+- Include screenshots or diagrams only if they demonstrate implemented changes
+- Preserve any existing template structure and formatting
+- If information is missing for any section, keep it minimal rather than making assumptions
